--- a/index.html
+++ b/index.html
@@ -63,9 +63,9 @@
                     <div class="divider-custom-line"></div>
                 </div>
                 <!-- Portfolio Grid Items-->
-                <div class="row justify-content-center">
-                    <!-- Portfolio Item 1-->
-                    <div class="col-md-6 col-lg-4 mb-5">
+                 <!--  <div class="row justify-content-center">
+                     Portfolio Item 1-->
+                    <!-- <div class="col-md-6 col-lg-4 mb-5">
                         <div class="portfolio-item mx-auto" data-bs-toggle="modal" data-bs-target="#portfolioModal1">
                             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
                                 <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
@@ -118,7 +118,7 @@
                             <img class="img-fluid" src="assets/img/portfolio/submarine.png" alt="..." />
                         </div>
                     </div>
-                </div>
+                </div>-->
             </div>
         </section>
         <!-- About Section-->
@@ -134,13 +134,16 @@
                 </div>
                 <!-- About Section Content-->
                 <div class="row">
-                    <div class="col-lg-4 ms-auto"><p class="lead">Freelancer is a free bootstrap theme created by Start Bootstrap. The download includes the complete source files including HTML, CSS, and JavaScript as well as optional SASS stylesheets for easy customization.</p></div>
-                    <div class="col-lg-4 me-auto"><p class="lead">You can create your own custom avatar for the masthead, change the icon in the dividers, and add your email address to the contact form to make it fully functional!</p></div>
-                </div>
+                    <div class="col-lg ms-auto"><p class="lead">
+                        Hi, I'm Mohamed Yassine. I'm a Software Engineer Student with a passion for web and mobile development. 
+                        Alongside programming, I'm interested in everything e-commerce, sport and art. 
+                        I'm always seeking knowledge and continuously trying to positively impact the world.
+                        </p></div>
+                 </div>
                 <!-- About Section Button-->
                 <div class="text-center mt-4">
-                    <a class="btn btn-xl btn-outline-light" href="https://drive.google.com/file/d/1fl5gRZ2RS8ThArcgdbx9mD3F5TZddJma">
-                        <i class="fas fa-file-user me-2"></i>
+                    <a class="btn btn-xl btn-outline-light" href="https://drive.google.com/file/d/1fl5gRZ2RS8ThArcgdbx9mD3F5TZddJma" target="_blank">
+                         <i class="fa-solid fa-file-user e-2"></i>
                         View my resume!
                     </a>
                 </div>
@@ -200,9 +203,9 @@
                             <div class="d-none" id="submitSuccessMessage">
                                 <div class="text-center mb-3">
                                     <div class="fw-bolder">Form submission successful!</div>
-                                    To activate this form, sign up at
+                                    Thanks !
                                     <br />
-                                    <a href="https://startbootstrap.com/solution/contact-forms">https://startbootstrap.com/solution/contact-forms</a>
+                                    <a href="https://startbootstrap.com/solution/contact-forms"></a>
                                 </div>
                             </div>
                             <!-- Submit error message-->
@@ -225,10 +228,10 @@
                     <div class="col-lg-4 mb-5 mb-lg-0">
                         <h4 class="text-uppercase mb-4">Location</h4>
                         <p class="lead mb-0">
-                            AIAC, Technopole de l’Aéroport Mohammed V, 
+                            AIAC, Technopole de l’Aéroport Mohammed V, Nouasser, 
 
                             <br />
-                            Nouasser, Casablanca, Morocco
+                             Casablanca, Morocco
                         </p>
                     </div>
                     <!-- Footer Social Icons-->
@@ -237,23 +240,16 @@
                         <a class="btn btn-outline-light btn-social mx-1" href="https://fb.com/mohamedyassinehar"><i class="fab fa-fw fa-facebook-f"></i></a>
                         <a class="btn btn-outline-light btn-social mx-1" href="#!"><i class="fab fa-fw fa-twitter"></i></a>
                         <a class="btn btn-outline-light btn-social mx-1" href="https://linkedin.com/in/myassineharrachmin"><i class="fab fa-fw fa-linkedin-in"></i></a>
-                        <a class="btn btn-outline-light btn-social mx-1" href="#!"><i class="fab fa-fw fa-dribbble"></i></a>
+                       
                     </div>
                     <!-- Footer About Text-->
-                    <div class="col-lg-4">
-                        <h4 class="text-uppercase mb-4">About Freelancer</h4>
-                        <p class="lead mb-0">
-                            Freelance is a free to use, MIT licensed Bootstrap theme created by
-                            <a href="http://startbootstrap.com">Start Bootstrap</a>
-                            .
-                        </p>
-                    </div>
+                        
                 </div>
             </div>
         </footer>
         <!-- Copyright Section-->
         <div class="copyright py-4 text-center text-white">
-            <div class="container"><small>Copyright &copy; Mohamed Yassine Harrachmin 2022</small></div>
+            <div class="container"><small>Copyright &copy; 2022</small></div>
         </div>
         <!-- Portfolio Modals-->
         <!-- Portfolio Modal 1-->
