--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
                 <!-- About Section Button-->
                 <div class="text-center mt-4">
                     <a class="btn btn-xl btn-outline-light" href="https://drive.google.com/file/d/1fl5gRZ2RS8ThArcgdbx9mD3F5TZddJma" target="_blank">
-                         <i class="fa-solid fa-file-user e-2"></i>
+                         <i class="fas fa-file-user me-2"></i> 
                         View my resume!
                     </a>
                 </div>
@@ -240,6 +240,7 @@
                         <a class="btn btn-outline-light btn-social mx-1" href="https://fb.com/mohamedyassinehar"><i class="fab fa-fw fa-facebook-f"></i></a>
                         <a class="btn btn-outline-light btn-social mx-1" href="#!"><i class="fab fa-fw fa-twitter"></i></a>
                         <a class="btn btn-outline-light btn-social mx-1" href="https://linkedin.com/in/myassineharrachmin"><i class="fab fa-fw fa-linkedin-in"></i></a>
+                        <a class="btn btn-outline-light btn-social mx-1" href="https://github.com/m-yassine-kun"><i class="fab fa-fw fa-github"></i></a>
                        
                     </div>
                     <!-- Footer About Text-->
