--- a/index.html
+++ b/index.html
@@ -63,9 +63,9 @@
                     <div class="divider-custom-line"></div>
                 </div>
                 <!-- Portfolio Grid Items-->
-                 <!--  <div class="row justify-content-center">
-                     Portfolio Item 1-->
-                    <!-- <div class="col-md-6 col-lg-4 mb-5">
+                   <div class="row justify-content-center">
+                  <!--  <!-- Portfolio Item 1-->
+                     <div class="col-md-6 col-lg-4 mb-5">
                         <div class="portfolio-item mx-auto" data-bs-toggle="modal" data-bs-target="#portfolioModal1">
                             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
                                 <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
@@ -117,8 +117,8 @@
                             </div>
                             <img class="img-fluid" src="assets/img/portfolio/submarine.png" alt="..." />
                         </div>
-                    </div>
-                </div>-->
+                    </div>-->
+                </div> 
             </div>
         </section>
         <!-- About Section-->
@@ -135,15 +135,15 @@
                 <!-- About Section Content-->
                 <div class="row">
                     <div class="col-lg ms-auto"><p class="lead">
-                        Hi, I'm Mohamed Yassine. I'm a Software Engineer Student with a passion for web and mobile development. 
-                        Alongside programming, I'm interested in everything e-commerce, sport and art. 
+                        Hi, I'm Mohamed Yassine. I'm a Software Engineer Student with a passion for web and mobile development.</p><p class="lead"> 
+                        Alongside programming, I'm interested in everything e-commerce, sport and art. </p><p class="lead">
                         I'm always seeking knowledge and continuously trying to positively impact the world.
                         </p></div>
                  </div>
                 <!-- About Section Button-->
                 <div class="text-center mt-4">
                     <a class="btn btn-xl btn-outline-light" href="https://drive.google.com/file/d/1fl5gRZ2RS8ThArcgdbx9mD3F5TZddJma" target="_blank">
-                         <i class="fas fa-file-user me-2"></i> 
+                         <i class="fa-solid fa-file-pdf me-2"></i> 
                         View my resume!
                     </a>
                 </div>
