--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
                         <!-- To make this form functional, sign up at-->
                         <!-- https://startbootstrap.com/solution/contact-forms-->
                         <!-- to get an API token!-->
-                        <form id="contactForm" data-sb-form-api-token="API_TOKEN">
+                        <form id="contactForm" data-sb-form-api-token="AIzaSyDR39JfdjibhaGLDIFyCTW3oJc23K1kMiY">
                             <!-- Name input-->
                             <div class="form-floating mb-3">
                                 <input class="form-control" id="name" type="text" placeholder="Enter your name..." data-sb-validations="required" />
@@ -160,7 +160,7 @@
                             <div class="d-none" id="submitSuccessMessage">
                                 <div class="text-center mb-3">
                                     <div class="fw-bolder">Form submission successful!</div>
-                                    Thanks !
+                                    
                                     <br />
                                     <a href="https://startbootstrap.com/solution/contact-forms"></a>
                                 </div>
