--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                  </div>
                 <!-- About Section Button-->
                 <div class="text-center mt-4">
-                    <a class="btn btn-xl btn-outline-light" href="https://drive.google.com/file/d/1fl5gRZ2RS8ThArcgdbx9mD3F5TZddJma" target="_blank">
+                    <a class="btn btn-xl btn-outline-light" style="color: #1abc9c;" href="https://drive.google.com/file/d/1fl5gRZ2RS8ThArcgdbx9mD3F5TZddJma" target="_blank">
                          <i class="fa-solid fa-file-pdf me-2"></i> 
                         View my resume!
                     </a>
