--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
                         </p>
                     </div>
                     <!-- Footer Social Icons-->
-                    <div class="col-lg-6 mb-6 mb-lg-0 " style="margin-top: 12;">
+                    <div class="col-lg-6 mb-6 mb-lg-0 " style="margin-top: 12 px;">
                         <h4 class="text-uppercase mb-4">Around the Web</h4>
                         <a class="btn btn-outline-light btn-social mx-1" href="https://fb.com/mohamedyassinehar"><i class="fab fa-fw fa-facebook-f"></i></a>
                         <a class="btn btn-outline-light btn-social mx-1" href="#!"><i class="fab fa-fw fa-twitter"></i></a>
