--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
                             <!-- an error submitting the form-->
                             <div class="d-none" id="submitErrorMessage"><div class="text-center text-danger mb-3">Error sending message!</div></div>
                             <!-- Submit Button-->
-                            <button class="btn btn-primary btn-xl" id="submit" type="submit">Send</button> 
+                            <button class="btn btn-primary btn-xl" style="color:#92ba92;" id="submit" type="submit">Send</button> 
                         </form>
                     </div>
                 </div>
