done for validation

--- a/index.html
+++ b/index.html
@@ -130,26 +130,26 @@
                         <form id="contactForm" class="needs-validation" novalidate>
                             <!-- Name input-->
                             <div class="form-floating mb-3">
-                                <input class="form-control" id="name" type="text" placeholder="Enter your name..."  />
+                                <input class="form-control" id="name" type="text" placeholder="Enter your name..."  required/>
                                 <label for="name">Full name</label>
                                 <div class="invalid-feedback" >A name is required.</div>
                             </div>
                             <!-- Email address input-->
                             <div class="form-floating mb-3">
-                                <input class="form-control" id="email" type="email" placeholder="name@example.com" />
+                                <input class="form-control" id="email" type="email" placeholder="name@example.com" required/>
                                 <label for="email">Email address</label>
                                 <div class="invalid-feedback" >An email is required.</div>
                                 <div class="invalid-feedback" >Email is not valid.</div>
                             </div>
                             <!-- Phone number input-->
                             <div class="form-floating mb-3">
-                                <input class="form-control" id="phone" type="tel" placeholder="(123) 456-7890" />
+                                <input class="form-control" id="phone" type="tel" placeholder="(123) 456-7890" required/>
                                 <label for="phone">Phone number</label>
                                 <div class="invalid-feedback" >A phone number is required.</div>
                             </div>
                             <!-- Message input-->
                             <div class="form-floating mb-3">
-                                <textarea class="form-control" id="message" type="text" placeholder="Enter your message here..." style="height: 10rem" ></textarea>
+                                <textarea class="form-control" id="message" type="text" placeholder="Enter your message here..." style="height: 10rem"  required></textarea>
                                 <label for="message">Message</label>
                                 <div class="invalid-feedback">A message is required.</div>
                             </div>
@@ -171,7 +171,7 @@
                             <!-- an error submitting the form-->
                             <div class="d-none" id="submitErrorMessage"><div class="text-center text-danger mb-3">Error sending message!</div></div>
                             <!-- Submit Button-->
-                            <button class="btn btn-primary btn-xl bg-primary text-white" style="color:#92ba92;" id="submitButton" type="submit">Send</button> 
+                            <button class="btn btn-primary btn-xl bg-primary text-white" style="color:#92ba92;" id="submit" type="submit">Send</button> 
                         </form>
                     </div>
                 </div>
